--- a/style.css
+++ b/style.css
@@ -44,3 +44,18 @@ nav ul li a.active {
   background: #fbe79c;
   color: black;
 }
+
+footer {
+    background-color: #ed9e29;
+    color: white;
+    display: flex;
+    justify-content: space-between; /* left-right alignment */
+    align-items: center;
+    padding: 15px 20px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    font-size: 14px;
+    box-sizing: border-box;
+}
+
