--- a/style.css
+++ b/style.css
@@ -45,6 +45,41 @@ nav ul li a.active {
   color: black;
 }
 
+main#content {
+    padding: 40px 40px 100px 40px; 
+    text-align: center;
+}
+
+main#content h1 {
+    font-size: 32px;
+    margin-bottom: 20px;
+}
+
+main#content p {
+    font-size: 18px;
+    line-height: 1.6;
+    max-width: 800px;
+    margin: 0 auto; /* center paragraph */
+}
+
+.fun-fact-box {
+    background-color: #e9e2d9;
+    border-left: 5px solid #d79330;
+    padding: 20px;
+    margin: 60px auto;
+    max-width: 800px;
+    text-align: left;
+    border-radius: 8px;
+}
+
+.fun-fact-box h2 {
+    margin-top: 0;
+    font-size: 22px;
+    color: #d79330;
+    display: flex;
+    align-items: center;
+}
+
 footer {
     background-color: #ed9e29;
     color: white;
